--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM node:14-alpine
 
 WORKDIR /usr/src/app
 
@@ -7,5 +7,7 @@ COPY package*.json ./
 RUN apk update
 
 RUN npm install
+
+COPY . .
 
 EXPOSE 8888
