--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM node:14-alpine
 
 WORKDIR /app
 
@@ -9,5 +9,7 @@ COPY package*.json ./
 RUN apk update
 
 RUN npm install
+
+COPY . .
 
 EXPOSE 8000
