--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14-alpine
+FROM node:10-alpine
 
 WORKDIR /usr/src/app
 
@@ -11,3 +11,5 @@ RUN npm install
 COPY . .
 
 EXPOSE 8888
+
+CMD ["node", "server.js"]
