--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     depends_on:
       - api
     ports:
-      - "8888:80"
+      - 3000:3000
     networks:
-     - network-backend
+     - back
  
 #API 
   api:
@@ -17,9 +17,9 @@ services:
     depends_on:
       - mongo
     ports:
-      - "8000:8080"
+      - 8080:8080
     networks: 
-     - network-backend
+     - back
 
 #DATABASE  
   mongo:
@@ -33,11 +33,11 @@ services:
       
       
     networks: 
-     - network-backend
+     - back
 
 
 networks:
-  - network-backend:
+  - back:
 
 volumes: 
   mongodb:
